fix hero content on small screen

--- a/client/src/Pages/DocDashboard/components/sidebar.module.css
+++ b/client/src/Pages/DocDashboard/components/sidebar.module.css
@@ -3,25 +3,13 @@
    height: 100%;
    min-height: 100%;
    max-height: 100%;
+   border: 2px solid red;
 }
 
 .navbody aside .top {
    display: flex;
    justify-content: flex-end;
    align-items: center;
-}
-aside .logo {
-   display: flex;
-   gap: 0.8rem;
-   justify-content: center;
-   align-items: center;
-   height: 3.1rem;
-}
-aside .logo h2 {
-   color: var(--lightcol);
-   font-weight: 400;
-   font-size: 1.8rem;
-   font-family: var(--logofont);
 }
 
 aside .close {
@@ -34,6 +22,7 @@ aside .sidebar {
    height: 86vh;
    position: relative;
    top: 1rem;
+   background: blue;
 }
 aside h3 {
    font-weight: 500;
@@ -114,9 +103,6 @@ aside .sidebar li.active {
 }
 
 @media (min-width: 2001px) {
-   aside .logo h2 {
-      font-size: 40px;
-   }
    aside h3 {
       font-size: 24px;
    }
@@ -218,17 +204,8 @@ aside .sidebar li.active {
    aside .sidebar li.active {
       background-color: var(--gray);
    }
-   /* aside .sidebar li.active:before {
-      content: '';
-      width: 2%;
-   }
-   aside .sidebar li.active span.icons {
-      margin-left: 0.1rem;
-   }
-   aside .sidebar li:hover span.icons {
-      margin-left: 0.2rem;
-   } */
 }
+
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
    .aside .log h2 {
       display: none;
@@ -350,12 +327,6 @@ aside .sidebar li.active {
       color: var(--midcol);
    }
 
-   aside .logo {
-      margin-left: 1rem;
-   }
-   aside .logo h2 {
-      display: inline;
-   }
    aside h3 {
       display: inline;
    }
@@ -373,38 +344,6 @@ aside .sidebar li.active {
 }
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
-   /* aside.active {
-      position: fixed;
-      left: 0;
-      background: var(--white);
-      width: 100%;
-      z-index: 3;
-      box-shadow: 1rem 3rem 4rem rgba(132, 139, 200, 0.18);
-      height: 100vh;
-      max-height: 100vh;
-      min-height: 100vh;
-      padding-right: 1.8rem;
-      display: block;
-      transition: all 500ms ease;
-      transition-duration: 500ms;
-   }
-   aside.notActive {
-      position: fixed;
-      left: -100%;
-      background: var(--white);
-      width: 18rem;
-      z-index: 3;
-      box-shadow: 1rem 3rem 4rem rgba(132, 139, 200, 0.18);
-      height: 100vh;
-      max-height: 100vh;
-      min-height: 100vh;
-      padding-right: 1.8rem;
-      display: none;
-      animation: showmenu 400ms ease-in-out forwards;
-      transition: all;
-      transition-delay: 500ms;
-   } */
-
    @keyframes showmenu {
       to {
          left: 0;
@@ -461,12 +400,6 @@ aside .sidebar li.active {
       color: var(--midcol);
    }
 
-   aside .logo {
-      margin-left: 1rem;
-   }
-   aside .logo h2 {
-      display: inline;
-   }
    aside h3 {
       display: inline;
    }
