--- a/client/src/Pages/Landing_page/components/hero.module.css
+++ b/client/src/Pages/Landing_page/components/hero.module.css
@@ -12,31 +12,27 @@
    display: flex;
    align-items: center;
    justify-content: center;
-   margin: 0 auto;
-   max-height: 100%;
+   height: 100%;
+   z-index: 4;
 }
 
-/* .hero_content {
-   padding-top: 2rem;
-   width: 50%;
+.hero_wrapper {
+   position: relative;
+   height: 100%;
+   width: 100%;
    display: flex;
-   flex-direction: column;
    align-items: center;
    justify-content: center;
-   color: var(--deepcol);
-} */
+}
 
 .hero_content {
-   position: absolute;
-   color: var(--gray);
-   width: 80%;
-   height: 80%;
-   right: 34px;
-   /* top: 100px; */
    display: flex;
+   gap: 1rem;
+   height: 100%;
    flex-direction: column;
    align-items: center;
    justify-content: center;
+   color: var(--gray);
 }
 
 .content__title {
@@ -47,15 +43,14 @@
 }
 
 .content_info {
-   padding-top: 1.2rem;
+   max-height: 10rem;
 }
 
 .content__info {
-   font-size: 20px;
+   font-size: 16px;
    font-family: var(--mainfont);
    color: var(--white);
    width: 100%;
-   height: 8rem;
 }
 
 .content_button {
@@ -87,8 +82,6 @@
    transition: all;
    transition-duration: 500ms;
 }
-/* color: var(--lightcol);
-   background-color: var(--white); */
 
 .content__button:hover {
    transform: translateY(-3px);
